Fix margin alignment in container and retain styles

--- a/shades.css
+++ b/shades.css
@@ -7,7 +7,7 @@
     justify-content: left;
     align-items: left;
     background-color: white;
-    margin-right: 350px;
+    margin-left: 350px;
 }
 .progress{
     border: none;
